cmake_minimum_required(VERSION 3.9)
project(debugger)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ../build/bin)

set(SOURCES main.cpp src/Debugger.cpp src/Debugger.h src/Breakpoint.cpp src/Breakpoint.h src/utils.h)
set(CMDPROMPT_LIB deps/command_prompt/src/cmdprompt/CommandPrompt.cpp deps/command_prompt/src/cmdprompt/CommandPrompt.h)
add_library(command_prompt STATIC ${CMDPROMPT_LIB})
add_executable(debugger ${SOURCES})
target_link_libraries(debugger command_prompt)
